fix scroll bar on ios

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -691,6 +691,18 @@ input[type='number'] {
     //     left:50%;
     // }
 }
+body{
+    // display: none;
+    -webkit-overflow-scrolling: touch;
+    ::-webkit-scrollbar {
+        width: 0 !important;
+        display: none !important;
+    }
+    /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+}
 
 .hidden-scrollbar {
     -webkit-overflow-scrolling: touch;
